# mcp_for_cocos2.4

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  USAGE.md  cleanup.cmd  install.cmd  publish-to-github.cmd
cocos-mcp-2x/: main.js  package.json  scene-script.js
cocos-mcp-2x/panel/: index.js
cocos-mcp-3x/: main.js  package.json
cocos-mcp-3x/panel/: index.js
docs/: adding-tools.md  architecture.md  claude-mcp-config-example.json  plan.md  unity-mcp-features.html
extension/: config.json  main.js  package.json  scene-script.js
extension/handlers/: execute_script.js  get_project_info.js  index.js  manage_asset.js  manage_node.js  manage_scene.js  read_console.js
extension/lib/: console-hook.js  ws-server.js
extension/panel/: index.js
server/: README.md  pyproject.toml
server/src/: main.py
server/src/core/: config.py
server/src/services/: registry.py
server/src/services/tools/: __init__.py  _common.py  execute_script.py  get_project_info.py  manage_asset.py  manage_node.py  manage_scene.py  read_console.py
server/src/transport/: ws_client.py
server/src/utils/: module_discovery.py
