[project]
name = "cocos-mcp-server"
version = "0.1.0"
description = "MCP server that drives Cocos Creator 2.4 via a WebSocket bridge installed as an editor extension."
readme = "README.md"
license = "MIT"
authors = [
    { name = "cocosMcp" }
]
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
cocos-mcp = "main:main"

[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools]
py-modules = ["main"]
